Boggle/wtf.txt
BoggleSolver.java:39: error: ',', ')', or '[' expected
	private void goDeep(String word, int i, int j boolean[][] visited)
	                                             ^
BoggleSolver.java:39: error: ';' expected
	private void goDeep(String word, int i, int j boolean[][] visited)
	                                                                 ^
BoggleSolver.java:47: error: ')' expected
		if (i > 0 && !visited[i-1][j]) goDeep(newWord, i - 1, j, getCopy(visited);
		                                                                         ^
BoggleSolver.java:49: error: ';' expected
		if (j > 0 && i > 0 && !visited[i-1][j-1]) goDeep(word, i - 1, j - 1), getCopy(visited);
		                                                                    ^
BoggleSolver.java:50: error: ';' expected
		if (j > 0 && i < rows-1 && !visited[i+1][j-1]) goDeep(word,i+1, j-1), getCopy(visited); 
		                                                                    ^
BoggleSolver.java:51: error: ';' expected
		if (i < rows - 1 && !visited[i+1][j]) goDeep(word, i+1, j), getCopy(visited);
		                                                          ^
BoggleSolver.java:53: error: ';' expected
			&& !visited[i+1][j+1]) goDeep(word,i+1,j+1), getCopy(visited);
			                                           ^
BoggleSolver.java:54: error: ';' expected
		if (j < cols-1 && !visited[i][j+1]) goDeep(word, i, j+1), getCopy(visited);
		                                                        ^
BoggleSolver.java:55: error: ')' expected
		if (j < cols-1 && i > 0 !visited[i-1][j+1]) goDeep(word, i-1, j+1), getCopy(visited);
		                       ^
BoggleSolver.java:55: error: not a statement
		if (j < cols-1 && i > 0 !visited[i-1][j+1]) goDeep(word, i-1, j+1), getCopy(visited);
		                        ^
BoggleSolver.java:55: error: ';' expected
		if (j < cols-1 && i > 0 !visited[i-1][j+1]) goDeep(word, i-1, j+1), getCopy(visited);
		                                          ^
BoggleSolver.java:55: error: ';' expected
		if (j < cols-1 && i > 0 !visited[i-1][j+1]) goDeep(word, i-1, j+1), getCopy(visited);
		                                                                  ^
12 errors
error: compilation failed
